<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tacoma.uw.leebui99.yaker.fragment.ColorSectionFragment"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:textSize="50dp"
        android:textColor="#000000"
        android:id="@+id/myColor"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/score"
        android:id="@+id/textView"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/score"
        android:layout_gravity="left" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/time"
        android:id="@+id/textView2"/>

    <TextView
        android:layout_width="76dp"
        android:layout_height="67dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/timer"/>

    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="200dp"

        android:layout_gravity="center">
        <TextView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:textSize="40dp"
            android:gravity="center"
            android:id="@+id/smallWord"
            android:layout_gravity="center"/>
    </FrameLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
